First Assignment Successully Completed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -166,3 +166,114 @@
     font-style: normal;
 
 }
+
+/* footer section start here */
+.final-part{
+
+    width: 1340px;
+    height: 505px;
+    background-color:#000;
+    background-repeat: no-repeat;
+    background-size:contain;
+    display: flex;
+    justify-content: space-between;
+}
+.future-part h3{
+    margin-top:50px;
+    display: inline-block;
+    color:#fff;
+    font-size: 45px;
+    line-height: 50px;
+    font-weight: 700;
+    margin-left:90px; 
+    font-family: 'Work Sans';
+    font-style: normal;
+
+}
+.future-part p{
+    color: #fff;
+    font-size:17px;
+    line-height: 21px;
+    font-weight: 400;
+    text-align: left;
+    font-family: 'Work Sans';
+    font-style: normal;
+    margin-left:90px; 
+}
+
+.image{
+    display: inline;
+    /* margin-left:90px; */
+    padding: 15px;
+    margin-top: 70px;
+    margin-left:60px;
+
+}
+
+.future-part address{
+    padding:40px;
+    color:#fff;
+    font-size:17px;
+    line-height: 21px;
+    font-weight: 400;
+    text-align: left;
+    font-family: 'Work Sans';
+    font-style: normal;
+    margin-left:50px;
+    
+}
+.future-part img{
+    padding:10px;
+    
+}
+.subscribe-part h3{
+
+    margin-top:70px;
+    /* display: inline-block; */
+    color:#fff;
+    font-size: 35px;
+    line-height: 50px;
+    font-weight: 700;
+    font-family: 'Work Sans';
+    font-style: normal;
+    text-align: left;
+    margin-left:-370px;
+
+}
+.subscribe-part form input{
+    
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-size:17px;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    padding:15px 20px;
+    margin-left:-370px;
+
+
+
+}
+.subscribe-part button{
+
+    width: 100px;
+    height: 50px;
+    background: #005FAC;
+    color:#fff;
+    font-size: 16px;
+    margin-left: 250px;
+    margin-top: 30px;
+    border: 2px solid #005FAC;
+    font-weight: 700;
+    margin-left:-370px;
+    
+
+    
+
+
+}
+
+    
+   
+
+ 
+    
